# Changes

## [0.3.0] - 2020-03-22

* Use prefix tree for underling data representation

## [0.2.4] - 2019-12-31

* Add `ResourceDef::resource_path_named()` path generation method

## [0.2.3] - 2019-12-25

* Add impl `IntoPattern` for `&String`

## [0.2.2] - 2019-12-25

* Use `IntoPattern` for `RouterBuilder::path()`

## [0.2.1] - 2019-12-25

* Add `IntoPattern` trait

* Add multi-pattern resources

## [0.2.0] - 2019-12-07

* Update http to 0.2

* Update regex to 1.3

* Use bytestring instead of string

## [0.1.5] - 2019-05-15

* Remove debug prints

## [0.1.4] - 2019-05-15

* Fix checked resource match

## [0.1.3] - 2019-04-22

* Added support for `remainder match` (i.e "/path/{tail}*")

## [0.1.2] - 2019-04-07

* Export `Quoter` type

* Allow to reset `Path` instance

## [0.1.1] - 2019-04-03

* Get dynamic segment by name instead of iterator.

## [0.1.0] - 2019-03-09

* Initial release